/**
 * Meta
 */
syntax = "proto3";
package woodpecker.proto.meta;
option go_package = "github.com/zilliztech/Woodpecker/proto";

/**
 * Unbounded Log meta info.
 */
message LogMeta{
  int64 logId = 1;
  int64 max_segment_roll_time_seconds = 2;
  int64 max_segment_roll_size_bytes = 3;
  int64 compaction_buffer_size_bytes = 4;
  int64 max_compaction_file_count = 5;
  fixed64 creation_timestamp = 6;
  fixed64 modification_timestamp = 7;
  // The truncated position of the log (inclusive)
  int64 truncated_segment_id = 8;
  int64 truncated_entry_id = 9;
}

/**
 * SegmentState defines the state of a log segment.
 */
enum SegmentState{
  Active = 0;
  InRecovery = 1;
  Completed = 2;
  Sealed = 3;
  Truncated = 4;
}

/**
 * SegmentMetadata defines a log segment meta info.
 */
message SegmentMetadata{
  int64 segNo = 1;
  int64 createTime = 2;
  int64 quorumId = 3;
  SegmentState state = 4;
  int64 completionTime = 5;
  int64 lastEntryId = 6;
  int64 size = 7;
  int64 sealedTime = 8;
  repeated int32 entryOffset = 9;
  repeated int32 fragmentOffset = 10;
}

/**
 * Version defines the version of meta.
 */
message Version{
  int32 major = 1;
  int32 minor = 2;
  int32 patch = 3;
}

/**
 * Quorum defines a quorum information.
 */
message QuorumInfo{
  int64 id = 1;
  int32 es = 2;
  int32 wq = 3;
  int32 aq = 4;
  repeated string nodes = 5;
}


